--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,30 @@
 <resources>
     <string name="app_name">Roommates</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login_label">Accedi a Roommates</string>
+    <string name="login_email_field">Email</string>
+    <string name="login_pass_field">Password</string>
+    <string name="login_forgotpass_label">Password dimenticata?</string>
+    <string name="login_login_btn">Accedi</string>
+    <string name="login_register_btn">Registrati</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="registration_register_label">Registrati a Roommates</string>
+    <string name="registration_confirm_pass_label">Conferma password</string>
+    <string name="logo_description">A purple house</string>
+    <string name="no_house">Non appartieni ad una casa!</string>
+    <string name="no_house_join_label">Conosci il codice di una casa già esistente?</string>
+    <string name="no_house_join_field">Codice casa</string>
+    <string name="no_house_join_btn">Unisciti</string>
+    <string name="no_house_create_label">Crea una nuova casa!</string>
+    <string name="no_house_create_field">Nome casa</string>
+    <string name="no_house_create_btn">Crea</string>
 </resources>
