--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="forgot_password_reset">Reset password</string>
     <string name="email_not_valid">Email non valida</string>
     <string name="forgot_password_sent">Email di recupero inviata</string>
+    <string name="name_field">Nome</string>
 </resources>
