--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="email_not_valid">Email non valida</string>
     <string name="forgot_password_sent">Email di recupero inviata</string>
     <string name="name_field">Nome</string>
+    <string name="error_join_house">Codice casa errato!</string>
 </resources>
