--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="registration_register_label">Registrati a Roommates</string>
+    <string name="registration_register_label">Registrati a Roommates, l\'app per i coinquilini</string>
     <string name="registration_confirm_pass_label">Conferma password</string>
     <string name="logo_description">A purple house</string>
     <string name="no_house">Non appartieni ad una casa!</string>
