--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="rubrica">Rubrica</string>
     <string name="note">Note</string>
     <string name="sondaggi">Sondaggi</string>
+    <string name="add_symbol">+</string>
 </resources>
