--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,9 @@
     <string name="error_join_house">Codice casa errato!</string>
     <string name="share_code_text">Unisciti alla mia casa su Roomates!\\nCodice: {code}\\nLink: {link}</string>
     <string name="share_code_title">Condividi il codice</string>
+    <string name="share_note_title">Condividi una nota</string>
+    <string name="delete_note_title">Conferma eliminazione</string>
+    <string name="delete_note_message">Vuoi eliminare la nota?</string>
+    <string name="note_new_hint">Nuova nota...</string>
+    <string name="new_note_btn">Salva nota</string>
 </resources>
