--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="drawer_open">Apri menu</string>
     <string name="drawer_close">Chiudi menu</string>
     <string name="impostazioni">Impostazioni</string>
+    <string name="delete_shopitem_message">Vuoi eliminare l\'elemento dalla lista?</string>
 </resources>
