--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="next_week">Prossima settimana</string>
     <string name="prompt_spinner_new_turno">Aggiungi gli utenti in ordine</string>
     <string name="share_turno_title">Condividi un turno di pulizia</string>
+    <string name="failed_registration">Registrazione fallita.</string>
 </resources>
