--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="complete">Completa</string>
     <string name="completed">Completato</string>
     <string name="to_complete">Da completare</string>
+    <string name="contact_notext">Inserisci tutti i campi</string>
 </resources>
