--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="completed">Completato</string>
     <string name="to_complete">Da completare</string>
     <string name="contact_notext">Inserisci tutti i campi</string>
+    <string name="duties_order">Inserisci utenti che devono pulire, nell\'ordine desiderato</string>
 </resources>
